refactor controllers and test mappers